<resources>
    <string name="app_name" translatable="false">Test</string>
    <string name="sigin_btn" translatable="false">Sigin</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="retype_password" translatable="false">Retype passwod</string>
    <string name="login_btn" translatable="false">Login</string>
    <string name="user" translatable="false">User name</string>

</resources>