<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.SiginActivity"
    android:background="@drawable/img">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="#B9B9A7"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_sig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingEnd="20dp"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/user_sig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:paddingEnd="20dp"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/passwod_sig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:textSize="25sp"
                android:maxLength="8"/>

            <EditText
                android:id="@+id/retype_passwod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/retype_password"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="25sp"
                android:maxLength="8"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sigin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/item_next_color"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/sigin_btn"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.74" />

</androidx.constraintlayout.widget.ConstraintLayout>